--- a/InternetShop/appsettings.Development.json
+++ b/InternetShop/appsettings.Development.json
@@ -4,5 +4,15 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "InternetShopDbContext": "Host=localhost;Port=5432;Database=dbshop;Username=postgres;Password=h06b10a03;"
+  },
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "oD25WaIjH2ksE+9RjT/Fb0mwZPzDyL9Sx+ZKZaI+9Rk=",
+    "Issuer": "calconnect",
+    "Audience": "account",
+    "ExpiryMinutes": 30
   }
 }
