--- a/InternetShop/appsettings.Development.json
+++ b/InternetShop/appsettings.Development.json
@@ -10,9 +10,9 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Key": "oD25WaIjH2ksE+9RjT/Fb0mwZPzDyL9Sx+ZKZaI+9Rk=",
+    "Key": "super-duper-secret-key-for-signature-777",
     "Issuer": "calconnect",
     "Audience": "account",
-    "ExpiryMinutes": 30
+    "ExpiryDays": 60
   }
 }
