--- a/InternetShop/appsettings.Development.json
+++ b/InternetShop/appsettings.Development.json
@@ -2,17 +2,28 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft": "Debug",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "ConnectionStrings": {
-    "InternetShopDbContext": "Host=localhost;Port=5432;Database=dbshop;Username=postgres;Password=h06b10a03;"
+    "InternetShopDbContext": "Host=localhost;Port=5432;Database=dbshop;Username=bogda;Password=1234"
+  },
+  "MongoDb": {
+    "ConnectionUrl": "mongodb://localhost:27017",
+    "DatabaseName": "dbcatalog",
+    "CollectionName": "products"
+  },
+  "Redis": {
+    "ConnectionString": "localhost:6379,abortConnect=false",
+    "InstanceName": "InternetShop"
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Key": "super-duper-secret-key-for-signature-777",
-    "Issuer": "calconnect",
     "Audience": "account",
-    "ExpiryDays": 60
+    "ExpiryDays": 60,
+    "Issuer": "calconnect",
+    "Key": "super-duper-secret-key-for-signature-777"
   }
 }
