--- a/InternetShop/appsettings.Development.json
+++ b/InternetShop/appsettings.Development.json
@@ -1,9 +1,9 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft.AspNetCore": "Warning",
-      "Microsoft": "Debug",
+      "Microsoft.EntityFrameworkCore": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
@@ -24,6 +24,6 @@
     "Audience": "account",
     "ExpiryDays": 60,
     "Issuer": "calconnect",
-    "Key": "super-duper-secret-key-for-signature-777"
+    "Key": "supersecretkey_32_chars_long_1234567890!"
   }
 }
